--- a/packages/mvc/package.json
+++ b/packages/mvc/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@moon-boot/plugin-express",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rimraf dist && tsc -p ./tsconfig.json && node scripts/fixTypes",
-    "boot-build": "cd ./packages/moon-boot && npm run build"
+    "build": "rimraf dist && tsc -p ./tsconfig.json && node ../../scripts/fixTypes",
+    "boot-build": "cd ./packages/moon-boot && npm run build",
+    "publish": "npm run build && npm version patch && npm publish"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "chalk": "^4.1.0",
     "fs-extra": "^9.1.0",
     "js-yaml": "^4.0.0",
@@ -20,6 +22,9 @@
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.5"
+  },
+  "peerDependencies": {
+    "moon-boot": "^0.0.1-beta"
   },
   "keywords": [],
   "author": "",
