--- a/packages/moon-boot/package.json
+++ b/packages/moon-boot/package.json
@@ -1,12 +1,12 @@
 {
   "name": "moon-boot",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rimraf dist && tsc -p ./tsconfig.json && node ../../scripts/fixTypes",
-    "publish": "npm run build && npm version patch && npm publish"
+    "pub": "npm run build && npm publish --registry=https://registry.npmjs.org"
   },
   "dependencies": {
     "chalk": "^4.1.0",
