--- a/packages/mysql/package.json
+++ b/packages/mysql/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "moon-boot",
-  "version": "0.0.4",
+  "name": "@moonboot/plugin-mysql",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rimraf dist && tsc -p ./tsconfig.json && node ../../scripts/fixTypes",
-    "pub": "npm run build && npm publish --registry=https://registry.npmjs.org"
+    "pub": "npm run build && npm publish --registry=https://registry.npmjs.org --access public"
   },
   "dependencies": {
     "chalk": "^4.1.0",
     "fs-extra": "^9.1.0",
-    "js-yaml": "^4.0.0",
-    "log4js": "^6.3.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "mysql2": "^2.2.5"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.7",
-    "@types/js-yaml": "^4.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.5"
+  },
+  "peerDependencies": {
+    "moon-boot": "^0.0.3"
   },
   "keywords": [],
   "author": "CYJ",
