--- a/packages/nacos/package.json
+++ b/packages/nacos/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@moonboot/plugin-mysql-mybatis",
-  "version": "0.0.2",
+  "name": "@moonboot/plugin-nacos",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "ts-node src/index",
     "build": "rimraf dist && tsc -p ./tsconfig.json && node ../../scripts/fixTypes",
     "pub": "npm run build && npm publish --registry=https://registry.npmjs.org --access public"
   },
@@ -13,18 +12,18 @@
     "chalk": "^4.1.0",
     "fs-extra": "^9.1.0",
     "reflect-metadata": "^0.1.13",
-    "mysql2": "^2.2.5"
+    "blueimp-md5": "^2.18.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.7",
+    "@types/blueimp-md5": "^2.7.0",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.5"
   },
   "peerDependencies": {
-    "moon-boot": ">=0.0.5",
-    "@moonboot/plugin-mysql": ">=0.0.3"
+    "moon-boot": ">=0.0.5"
   },
   "keywords": [],
   "author": "CYJ",
