--- a/packages/nacos/package.json
+++ b/packages/nacos/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@moonboot/plugin-nacos",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -23,7 +23,8 @@
     "typescript": "^4.1.5"
   },
   "peerDependencies": {
-    "moon-boot": ">=0.0.5"
+    "moon-boot": ">=0.0.5",
+    "axios": ">=0.10.0"
   },
   "keywords": [],
   "author": "CYJ",
