--- a/packages/moon-boot/tsconfig.json
+++ b/packages/moon-boot/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "ES6",
     "module": "commonjs",
     "sourceMap": false,
     "outDir": "./dist",
@@ -20,6 +20,16 @@
         "src/*"
       ]
     },
+    "lib": [
+      "ES2015",
+      "ES2016",
+      "ES2017",
+      "ES2018",
+      "ES2019",
+      "ES2020",
+      "ES5",
+      "ESNext"
+    ]
   },
   "include": [
     "src/**/*"
